--- a/account-management/src/main/resources/application.yml
+++ b/account-management/src/main/resources/application.yml
@@ -8,6 +8,19 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
+    listener:
+      simple:
+        retry:
+          enabled: true
+          initial-interval: 3s
+          max-attempts: 6
+          max-interval: 10s
+          multiplier: 2
   profiles:
     active: development
   security:
