--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,18 +3,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>reservio</groupId>
+        <artifactId>reservio-microservices</artifactId>
+        <version>1.0.0</version><!-- lookup parent from repository -->
     </parent>
-    <groupId>reservio</groupId>
     <artifactId>common</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
     <name>common</name>
     <description>common</description>
     <properties>
         <java.version>20</java.version>
+        <maven.compiler.source>20</maven.compiler.source>
+        <maven.compiler.target>20</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -78,7 +78,7 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>common</finalName>
+        <finalName>common-re</finalName>
     </build>
 
 </project>
