--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -3,18 +3,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>reservio</groupId>
+		<artifactId>reservio-microservices</artifactId>
+		<version>1.0.0</version><!-- lookup parent from repository -->
 	</parent>
-	<groupId>reservio</groupId>
 	<artifactId>user-management</artifactId>
 	<version>1.0.0</version>
 	<name>user-management</name>
 	<description>user-management</description>
+	<packaging>jar</packaging>
 	<properties>
-		<java.version>20</java.version>
+		<maven.compiler.source>20</maven.compiler.source>
+		<maven.compiler.target>20</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -24,6 +24,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>reservio</groupId>
+			<artifactId>common</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -71,11 +76,6 @@
 			<version>3.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>reservio</groupId>
-			<artifactId>common</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
@@ -98,4 +98,5 @@
 		</plugins>
 		<finalName>user-management</finalName>
 	</build>
+
 </project>
