--- a/restaurant-management/pom.xml
+++ b/restaurant-management/pom.xml
@@ -3,10 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>reservio</groupId>
+		<artifactId>reservio-microservices</artifactId>
+		<version>1.0.0</version><!-- lookup parent from repository -->
 	</parent>
 	<groupId>reservio</groupId>
 	<artifactId>restaurant-management</artifactId>
@@ -24,6 +23,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>reservio</groupId>
+			<artifactId>common</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
