create catalog service and setup structure

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>subscription-management</module>
         <module>storage-management</module>
         <module>payment-management</module>
+        <module>product-catalog-management</module>
     </modules>
 
     <dependencyManagement>
