--- a/account-management/pom.xml
+++ b/account-management/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>reservio</groupId>
     <artifactId>account-management</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>account-management</name>
     <description>account-management</description>
     <properties>
