--- a/order-management/pom.xml
+++ b/order-management/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>reservio</groupId>
     <artifactId>order-management</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>order-management</name>
     <description>order-management</description>
     <properties>
