--- a/payment-management/pom.xml
+++ b/payment-management/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>reservio</groupId>
     <artifactId>payment-management</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>payment-management</name>
     <description>payment-management</description>
     <properties>
