--- a/reservation-management/pom.xml
+++ b/reservation-management/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>reservio</groupId>
     <artifactId>reservation-management</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>reservation-management</name>
     <description>reservation-management</description>
     <properties>
