--- a/reservio-gateway/pom.xml
+++ b/reservio-gateway/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>reservio</groupId>
 	<artifactId>reservio-gateway</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>reservio-gateway</name>
 	<description>reservio-gateway</description>
 	<properties>
