--- a/restaurant-management/pom.xml
+++ b/restaurant-management/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>reservio</groupId>
 	<artifactId>restaurant-management</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>restaurant-management</name>
 	<description>restaurant-management</description>
 	<properties>
