--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -11,7 +11,6 @@
 	<version>1.0.0</version>
 	<name>user-management</name>
 	<description>user-management</description>
-	<packaging>jar</packaging>
 	<properties>
 		<maven.compiler.source>20</maven.compiler.source>
 		<maven.compiler.target>20</maven.compiler.target>
@@ -28,7 +27,7 @@
 		<dependency>
 			<groupId>reservio</groupId>
 			<artifactId>common</artifactId>
-			<version>2.0.0</version>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -87,6 +86,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<mainClass>reservio.usermanagement.UserManagementApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -94,6 +94,15 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>
+								repackage
+							</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 		<finalName>user-management</finalName>
