--- a/order-management/pom.xml
+++ b/order-management/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>reservio</groupId>
+            <artifactId>common</artifactId>
+            <version>2.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
