--- a/reservio-gateway/Dockerfile
+++ b/reservio-gateway/Dockerfile
@@ -1,5 +1,6 @@
-FROM openjdk:20
-LABEL authors="israfil"
-EXPOSE 8080
-ADD target/reservio-gateway.jar reservio-gateway.jar
-ENTRYPOINT ["java", "-jar", "reservio-gateway.jar"]
+FROM openjdk:20-oracle
+LABEL authors="israfil_gzdl"
+
+COPY target/reservio-management.jar reservio-management.jar
+EXPOSE 9005
+ENTRYPOINT ["java","-jar", "reservio-management.jar"]
