--- a/reservio-gateway/pom.xml
+++ b/reservio-gateway/pom.xml
@@ -59,11 +59,13 @@
 	</dependencies>
 
 	<build>
+		<finalName>reservio-management</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<mainClass>reservio.reserviogateway.ReservioGatewayApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -71,8 +73,16 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>
+								repackage
+							</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
-		<finalName>reservio-gateway</finalName>
 	</build>
 </project>
