--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -28,6 +28,7 @@
 			<groupId>reservio</groupId>
 			<artifactId>common</artifactId>
 			<version>1.0.0</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -107,5 +108,4 @@
 		</plugins>
 		<finalName>user-management</finalName>
 	</build>
-
 </project>
