--- a/account-management/src/main/resources/application.yml
+++ b/account-management/src/main/resources/application.yml
@@ -1,7 +1,13 @@
+POSTGRES_USER: postgres
+POSTGRES_PASSWORD: postgres
+POSTGRES_DB: reservio
+DB_URL: localhost:5432
 
 spring:
+  application:
+    name: account-management
   datasource:
-    url: ${URL}
+    url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
     username: postgres
     password: postgres
   jpa:
@@ -32,5 +38,3 @@ spring:
       matching-strategy: ant_path_matcher
 server:
   port: '8090'
-
-URL: jdbc:postgresql://localhost:5432/postgres
