--- a/payment-management/src/main/resources/application.yml
+++ b/payment-management/src/main/resources/application.yml
@@ -1,3 +1,34 @@
+POSTGRES_USER: postgres
+POSTGRES_PASSWORD: postgres
+POSTGRES_DB: reservio
+DB_URL: localhost:5432
+
 server:
   port: 8092
+
+spring:
+  application:
+    name: payment-management
+  datasource:
+    url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
+    username: postgres
+    password: postgres
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
+    listener:
+      simple:
+        retry:
+          enabled: true
+          initial-interval: 3s
+          max-attempts: 6
+          max-interval: 10s
+          multiplier: 2
+
 
