--- a/reservation-management/src/main/resources/application.yml
+++ b/reservation-management/src/main/resources/application.yml
@@ -4,6 +4,8 @@ POSTGRES_DB: reservio
 DB_URL: localhost:5432
 
 spring:
+  application:
+    name: reservation-management
   datasource:
     url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
     username: ${POSTGRES_USER}
