--- a/reservio-gateway/src/main/resources/application.yml
+++ b/reservio-gateway/src/main/resources/application.yml
@@ -1,13 +1,19 @@
+POSTGRES_USER: postgres
+POSTGRES_PASSWORD: postgres
+POSTGRES_DB: reservio
+DB_URL: localhost:5432
+
+
 spring:
   application:
     name: reservio-gateway
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     database: postgresql
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
     username: postgres
     password: postgres
 server:
