--- a/subscription-management/src/main/resources/application-dev.yml
+++ b/subscription-management/src/main/resources/application-dev.yml
@@ -4,17 +4,14 @@ POSTGRES_DB: reservio
 DB_URL: localhost:5432
 
 spring:
-  application:
-    name: user-management
   datasource:
     url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
-
   security:
     user:
       name: admin
@@ -22,8 +19,7 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-
-
 server:
-  port: 8095
+  port: 8096
+
 
