--- a/subscription-management/src/main/resources/application.yml
+++ b/subscription-management/src/main/resources/application.yml
@@ -1,3 +1,26 @@
+POSTGRES_USER: postgres
+POSTGRES_PASSWORD: postgres
+POSTGRES_DB: reservio
+DB_URL: localhost:5432
+
+spring:
+  application:
+    name: user-management
+  datasource:
+    url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+  security:
+    user:
+      name: admin
+      password: 123456
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 server:
   port: 8096
-
