--- a/user-management/src/main/resources/application.yml
+++ b/user-management/src/main/resources/application.yml
@@ -4,6 +4,8 @@ POSTGRES_DB: reservio
 DB_URL: localhost:5432
 
 spring:
+  application:
+    name: user-management
   datasource:
     url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
     username: ${POSTGRES_USER}
@@ -21,4 +23,4 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
 server:
-  port: '8097'
+  port: 8097
