--- a/reservation-management/pom.xml
+++ b/reservation-management/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.0.2</version>
+        </dependency>
+        <dependency>
             <groupId>reservio</groupId>
             <artifactId>common</artifactId>
             <version>1.0.0</version>
