--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -25,6 +25,11 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+		<dependency>
 			<groupId>reservio</groupId>
 			<artifactId>common</artifactId>
 			<version>1.0.0</version>
