--- a/subscription-management/src/main/resources/application.yml
+++ b/subscription-management/src/main/resources/application.yml
@@ -5,7 +5,7 @@ DB_URL: localhost:5432
 
 spring:
   application:
-    name: user-management
+    name: subscription-management
   datasource:
     url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
     username: ${POSTGRES_USER}
