--- a/reservation-management/src/main/resources/application.yml
+++ b/reservation-management/src/main/resources/application.yml
@@ -3,6 +3,12 @@ POSTGRES_PASSWORD: postgres
 POSTGRES_DB: reservio
 DB_URL: localhost:5432
 
+
+app:
+  queue:
+    name: reservio
+
+
 spring:
   application:
     name: reservation-management
@@ -14,11 +20,24 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
+    listener:
+      simple:
+        retry:
+          enabled: true
+          initial-interval: 3s
+          max-attempts: 3
+          max-interval: 10s
+          multiplier: 2
   security:
     user:
       name: admin
       password: 123456
 
 server:
-  port: 8094
+  port: 9005
 
