--- a/account-management/src/main/resources/application-dev.yml
+++ b/account-management/src/main/resources/application-dev.yml
@@ -3,6 +3,11 @@ POSTGRES_PASSWORD: postgres
 POSTGRES_DB: reservio
 DB_URL: reservio:5432
 
+
+app:
+  queue:
+    name: reservio
+
 spring:
   datasource:
     url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
@@ -10,12 +15,25 @@ spring:
     password: ${POSTGRES_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
   security:
     user:
       name: admin
       password: 123456
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
+    listener:
+      simple:
+        retry:
+          enabled: true
+          initial-interval: 3s
+          max-attempts: 3
+          max-interval: 10s
+          multiplier: 2
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
