--- a/account-management/src/main/resources/application.yml
+++ b/account-management/src/main/resources/application.yml
@@ -6,6 +6,10 @@ DB_URL: localhost:5432
 EUREKA_ENABLED: true
 EUREKA_URL: http://localhost:8761/eureka
 
+app:
+  queue:
+    name: reservio
+
 spring:
   application:
     name: account-management
@@ -27,7 +31,7 @@ spring:
         retry:
           enabled: true
           initial-interval: 3s
-          max-attempts: 6
+          max-attempts: 3
           max-interval: 10s
           multiplier: 2
   profiles:
