--- a/order-management/src/main/resources/application-dev.yml
+++ b/order-management/src/main/resources/application-dev.yml
@@ -3,6 +3,16 @@ POSTGRES_PASSWORD: postgres
 POSTGRES_DB: reservio
 DB_URL: localhost:5432
 
+
+
+
+
+
+app:
+  queue:
+    name: reservio
+
+
 spring:
   datasource:
     url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
@@ -10,8 +20,21 @@ spring:
     password: ${POSTGRES_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
+    listener:
+      simple:
+        retry:
+          enabled: true
+          initial-interval: 3s
+          max-attempts: 3
+          max-interval: 10s
+          multiplier: 2
   security:
     user:
       name: admin
@@ -20,6 +43,5 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
 server:
-  port: 8097
-
+  port: 9001
 
