--- a/payment-management/src/main/resources/application-dev.yml
+++ b/payment-management/src/main/resources/application-dev.yml
@@ -7,6 +7,10 @@ EUREKA_ENABLED: true
 EUREKA_URL: http://localhost:8761/eureka
 
 
+app:
+  queue:
+    name: reservio
+
 spring:
   datasource:
     url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
@@ -14,8 +18,21 @@ spring:
     password: ${POSTGRES_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
+    listener:
+      simple:
+        retry:
+          enabled: true
+          initial-interval: 3s
+          max-attempts: 3
+          max-interval: 10s
+          multiplier: 2
   security:
     user:
       name: admin
@@ -33,7 +50,8 @@ eureka:
     enabled: ${EUREKA_ENABLED}
 
 
+
 server:
-  port: 8097
+  port: 9003
 
 
