--- a/reservio-gateway/src/main/resources/application-dev.yml
+++ b/reservio-gateway/src/main/resources/application-dev.yml
@@ -3,6 +3,10 @@ POSTGRES_PASSWORD: postgres
 POSTGRES_DB: reservio
 DB_URL: localhost:5432
 
+app:
+  queue:
+    name: reservio
+
 spring:
   datasource:
     url: jdbc:postgresql://${DB_URL}/${POSTGRES_DB}
