--- a/restaurant-management/pom.xml
+++ b/restaurant-management/pom.xml
@@ -30,6 +30,16 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-amqp</artifactId>
+			<version>3.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit</artifactId>
+			<version>3.0.4</version>
+		</dependency>
+		<dependency>
 			<groupId>reservio</groupId>
 			<artifactId>common</artifactId>
 			<version>1.0.0</version>
