--- a/restaurant-management/src/main/resources/application.yml
+++ b/restaurant-management/src/main/resources/application.yml
@@ -6,6 +6,13 @@ DB_URL: localhost:5432
 EUREKA_ENABLED: true
 EUREKA_URL: http://localhost:8761/eureka
 
+
+
+app:
+  queue:
+    name: reservio
+
+
 spring:
   application:
     name: restaurant-management
@@ -17,7 +24,19 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
+    listener:
+      simple:
+        retry:
+          enabled: true
+          initial-interval: 3s
+          max-attempts: 3
+          max-interval: 10s
+          multiplier: 2
   security:
     user:
       name: admin
@@ -36,7 +55,5 @@ eureka:
 
 
 
-
-
 server:
-  port: 8097
+  port: 9006
