--- a/payment-management/src/main/resources/application.yml
+++ b/payment-management/src/main/resources/application.yml
@@ -7,18 +7,15 @@ EUREKA_ENABLED: true
 EUREKA_URL: http://localhost:8761/eureka
 
 
-
-
-
-ACCOUNT_MANAGEMENT_URL: http://ACCOUNT-MANAGEMENT
-ORDER_MANAGEMENT_URL: http://ORDER-MANAGEMENT
-PAYMENT_MANAGEMENT_URL: http://PAYMENT-MANAGEMENT
-PRODUCT_CATALOG_MANAGEMENT_URL: http://PRODUCT-CATALOG-MANAGEMENT
-RESERVATION_MANAGEMENT_URL: http://RESERVATION-MANAGEMENT
-RESTAURANT_MANAGEMENT_URL: http://RESTAURANT-MANAGEMENT
-STORAGE_MANAGEMENT_URL: http://localhost:9007
-SUBSCRIPTION_MANAGEMENT_URL: http://SUBSCRIPTION-MANAGEMENT
-USER_MANAGEMENT_URL: http://USER-MANAGEMENT
+ACCOUNT_MANAGEMENT_URL: http://ACCOUNT-MANAGEMENT/accountManagement
+ORDER_MANAGEMENT_URL: http://ORDER-MANAGEMENT/orderManagement
+PAYMENT_MANAGEMENT_URL: http://PAYMENT-MANAGEMENT/paymentManagement
+PRODUCT_CATALOG_MANAGEMENT_URL: http://PRODUCT-CATALOG-MANAGEMENT/productCatalogManagement
+RESERVATION_MANAGEMENT_URL: http://RESERVATION-MANAGEMENT/reservationManagement
+RESTAURANT_MANAGEMENT_URL: http://RESTAURANT-MANAGEMENT/restaurantManagement
+STORAGE_MANAGEMENT_URL: http://STORAGE-MANAGEMENT/storageManagement
+SUBSCRIPTION_MANAGEMENT_URL: http://SUBSCRIPTION-MANAGEMENT/subscriptionManagement
+USER_MANAGEMENT_URL: http://USER-MANAGEMENT/userManagement
 
 app:
   queue:
@@ -64,11 +61,10 @@ spring:
 
 eureka:
   client:
-    service-url:
-      defaultZone: ${EUREKA_URL}
-    fetch-registry: true
-    register-with-eureka: true
-    enabled: ${EUREKA_ENABLED}
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    preferIpAddress: true
 
 
 server:
