--- a/reservation-management/src/main/resources/application.yml
+++ b/reservation-management/src/main/resources/application.yml
@@ -4,15 +4,15 @@ POSTGRES_DB: reservio
 DB_URL: localhost:5432
 
 
-ACCOUNT_MANAGEMENT_URL: http://ACCOUNT-MANAGEMENT
-ORDER_MANAGEMENT_URL: http://ORDER-MANAGEMENT
-PAYMENT_MANAGEMENT_URL: http://PAYMENT-MANAGEMENT
-PRODUCT_CATALOG_MANAGEMENT_URL: http://PRODUCT-CATALOG-MANAGEMENT
-RESERVATION_MANAGEMENT_URL: http://RESERVATION-MANAGEMENT
-RESTAURANT_MANAGEMENT_URL: http://RESTAURANT-MANAGEMENT
-STORAGE_MANAGEMENT_URL: http://localhost:9007
-SUBSCRIPTION_MANAGEMENT_URL: http://SUBSCRIPTION-MANAGEMENT
-USER_MANAGEMENT_URL: http://USER-MANAGEMENT
+ACCOUNT_MANAGEMENT_URL: http://ACCOUNT-MANAGEMENT/accountManagement
+ORDER_MANAGEMENT_URL: http://ORDER-MANAGEMENT/orderManagement
+PAYMENT_MANAGEMENT_URL: http://PAYMENT-MANAGEMENT/paymentManagement
+PRODUCT_CATALOG_MANAGEMENT_URL: http://PRODUCT-CATALOG-MANAGEMENT/productCatalogManagement
+RESERVATION_MANAGEMENT_URL: http://RESERVATION-MANAGEMENT/reservationManagement
+RESTAURANT_MANAGEMENT_URL: http://RESTAURANT-MANAGEMENT/restaurantManagement
+STORAGE_MANAGEMENT_URL: http://STORAGE-MANAGEMENT/storageManagement
+SUBSCRIPTION_MANAGEMENT_URL: http://SUBSCRIPTION-MANAGEMENT/subscriptionManagement
+USER_MANAGEMENT_URL: http://USER-MANAGEMENT/userManagement
 
 app:
   queue:
